<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imgRow"
            android:layout_margin="7dp"
            android:contentDescription="@string/thumbnail"
            android:src="@drawable/rainbow_happy"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvTitle"
                android:layout_margin="7dp"
                android:text="@string/title"
                android:textColor="#757575"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescription"
                android:layout_marginLeft="10dp"
                android:text="@string/description"
                android:textColor="#757575"
                android:textSize="15sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="7dp"
                android:id="@+id/img_row_delete"
                android:contentDescription="@string/delete_image"
                android:src="@drawable/ic_block_black_24dp"
                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="7dp"
                android:id="@+id/img_row_add"
                android:contentDescription="@string/add_image"
                android:src="@drawable/ic_insert_photo_white_24dp"/>

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>